<resources>
    <string name="app_name">common_lib</string>
    <string name="setting_language_english">英语</string>
    <string name="setting_language_th">泰语</string>
    <string name="follow_system">跟随系统</string>
    <string name="just_now">刚刚</string>
    <string name="time_minute">&#160;分钟前</string>
    <string name="time_hour">&#160;小时前</string>
    <string name="time_day">&#160;天前</string>
    <string name="net_work_error">网络异常，请稍后再试！</string>
    <string name="please_opend_gps">请打开GPS</string>
    <string name="must_permission_content">缺少定位权限、存储权限，这会导致地图、导航、拍照等部分功能无法使用</string>
    <string name="send_verify_code">发送</string>
    <string name="resend_verify_code">重新发送</string>
    <string name="cancel">取消</string>
    <string name="i_see">查看</string>
    <string name="not_opend_notify_describe">您未开启通知权限，将不会收到报警 等安全提醒信息，建议您在手机系统 “设置”中开启通知权限。</string>
    <string name="confirm_setting">去设置</string>
    <string name="not_notify_again">不再提醒</string>
    <string name="amap_name">高德地图</string>
    <string name="baidu_map_name">百度地图</string>
    <string name="google_map_name">google地图</string>
    <string name="new_vehicle_online">（%s）新版本上线</string>
    <string name="label_update_content">本次更新内容：</string>
    <string name="later_on">稍后再说</string>
    <string name="immediately_update">立即更新</string>
    <string name="user_and_private_protocol">用户协议及隐私政策</string>
    <string name="v2x_areement">《用户协议及隐私政策》</string>
    <string name="label_agree">同意</string>
    <string name="label_exit">退出</string>
    <string name="select_phonto">从手机相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="check_big_picture">查看大图</string>
    <string name="net_work_no_connected">暂无网络</string>
    <string name="message_nodate">暂无消息</string>
    <string name="message_no_content">暂无内容</string>
    <string name="refresh">刷新</string>
    <string name="call_back">返回</string>
    <string name="label_unconfirm_order">待确认</string>
    <string name="label_not_complete_order">待完成</string>
    <string name="label_completed_order">已完成</string>
</resources>
