<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_amap"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/amap_name"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@android:color/white"></View>

    <TextView
        android:id="@+id/tv_baidu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/baidu_map_name"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"></View>

    <TextView
        android:id="@+id/tv_google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/google_map_name"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="#66ffffff"></View>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@android:color/black" />

</LinearLayout>