<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_fragment_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_common_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_update_dailog_title_bg"
        android:gravity="center"
        android:minHeight="@dimen/dp_50"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/new_vehicle_online"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/txt_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/label_update_content"
        android:textColor="@color/common_item_name_color"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/txt_common_dialog_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_20"
        android:textColor="@color/black_2"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_common_dialog_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/later_on"
            android:textColor="@color/green_8"
            android:textSize="@dimen/sp_15" />

        <View
            android:id="@+id/view_halving_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_3" />

        <Button
            android:id="@+id/btn_common_dialog_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/immediately_update"
            android:textColor="@color/green_8"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>
</LinearLayout>